// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Me Conversation Message handles null message bodies 1`] = `
{
  "from": {
    "email": "collector@example.com",
  },
  "initialMessage": "Loved some of the works at your fair booth!",
  "internalID": "420",
  "messages": {
    "edges": [],
  },
}
`;

exports[`Me Conversation Message returns proper is_from_user 1`] = `
{
  "conversation": {
    "from": {
      "email": "collector@example.com",
    },
    "initialMessage": "Loved some of the works at your fair booth!",
    "internalID": "420",
    "messages": {
      "edges": [
        {
          "node": {
            "body": "Loved some of the works at your fair booth!",
            "from": {
              "email": "fancy_german_person@posteo.de",
              "name": "Percy Z",
            },
            "internalID": "222",
            "isFromUser": true,
          },
        },
        {
          "node": {
            "body": "I'm a cat oh yea!",
            "from": {
              "email": "fancy_german_person@posteo.de",
              "name": "Percy Z",
            },
            "internalID": "222",
            "isFromUser": true,
          },
        },
      ],
    },
  },
}
`;

exports[`Me Conversation Message returns sanitized messages 1`] = `
{
  "conversation": {
    "from": {
      "email": "collector@example.com",
    },
    "initialMessage": "Loved some of the works at your fair booth!",
    "internalID": "420",
    "messagesConnection": {
      "edges": [
        {
          "node": {
            "body": "Loved some of the works at your fair booth!",
            "cc": [],
            "from": {
              "email": "fancy_german_person@posteo.de",
              "name": "Percy Z",
            },
            "internalID": "222",
            "isFirstMessage": true,
            "to": [],
          },
        },
        {
          "node": {
            "body": "I'm a cat oh yea!",
            "cc": [
              ""Another Recipient" <another_recipient_in_cc@cat.com>",
            ],
            "from": {
              "email": "fancy_german_person@posteo.de",
              "name": "Percy Z",
            },
            "internalID": "222",
            "isFirstMessage": false,
            "to": [
              ""Recipient Name" <recipient@cat.com>",
            ],
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;
